JS learning: comments, functions, iterations, math, variables

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JavaScript</title>
 </head>
 <body>
-    
+    <!-- Comments -->
+    <!-- <script src="js/comments.js"></script> -->
+    <!-- Funcitons -->
+    <!-- <script src="js/functions.js"></script> -->
+    <!-- Variables -->
+    <!-- <script src="js/variables.js"></script> -->
+    <!-- Math -->
+    <!-- <script src="js/math.js"></script> -->
+    <!-- Math -->
+    <script src="js/iterations.js"></script>
 </body>
 </html>
