--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Math -->
     <!-- <script src="js/math.js"></script> -->
     <!-- Math -->
-    <script src="js/iterations.js"></script>
+    <!-- <script src="js/iterations.js"></script> -->
+    <!-- JSON -->
+    <script src="js/json.js"></script>
 </body>
 </html>
