--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <!-- <script src="js/iterations.js"></script> -->
     <!-- JSON -->
     <script src="js/json.js"></script>
+    <!-- Warsztat -->
+    <!-- <script src="js/warsztat.js"></script> -->
+
 </body>
 </html>
